# argsparse

./: .gitignore  .gitmodules  CMakeLists.txt  SConstruct  argsparse.c  argsparse.h  example.scons  internal_funcs.c  internal_funcs.h  internal_types.h  iterate.h
cmake/: argsparse-lib.cmake  getopt.cmake  googletest.cmake
example/: CMakeLists.txt  example.c  example.cpp
lib/inc/: internal_types.h
lib/src/: argsparse.c
lib/tests/: CMakeLists.txt  TestMain.cpp  tokenize.c  tokenize.h
test/: CMakeLists.txt  argsparseTests.cpp
